# colav-gateway

./: .gitignore  README.md  bootstrap_colav_gateway.sh  dockerfile  package.xml  requirements.txt  setup.cfg  setup.py  test.txt
.devcontainer/: devcontainer.json
.github/workflows/: workflow.yml
colav_gateway/: colav_gateway.py  colav_gateway_node.py  controller_interface_node.py  execute_controller_interface_node.py  execute_mission_interface_node.py  gateway_launch.py  mission_request_interface_node.py  package.xml  setup.cfg  setup.py  start_hybrid_automaton_sample_srv.py
colav_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
colav_gateway/config/: colav_gateway_config.json  (+1 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/colav_gateway/share/colav_gateway/: colav_gateway.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: colav_gateway.launch.py
log/: latest_build
proto/: controllerFeedback.proto
proto_gen/: controllerFeedback_pb2.py
schemas/: ASU_MISSION_REQUEST_RESPONSE_SCHEMA.json  ASU_MISSION_REQUEST_SCHEMA.json
scripts/: controller_interface_node.py  mission_interface_node.py
test/: controller_feedback_pub.py  controller_feedback_sub.py  mission_request_test.py  publish_protobuf_obstacles_update.py  pytest.ini  test_mission_request.json  test_publish_protobuf.py  test_publish_protobuf_controllerFeedback_pb2.py  test_receive_protobuf_controllerFeedback.py
utils/: proto_ros_converter_utils.py  ros_proto_converter_utils.py
(+21 files in other folders)
