<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>colav_gateway</name>
  <version>0.0.1</version>
  <description>
  colav_gateway is the gateway to the colav system providing nodes for managing a planning mission and receiving and providing feedback 
  to external applications utilizing COLAV for autonomous navigation
  </description>
  <maintainer email="r.mckee@qub.ac.uk">Ryan McKee</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>rclpy_logging</depend>
  <depend>rclpy_impl</depend>
  <depend>colav_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!--python3 Standard library dependencies-->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-argparse</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <exec_depend>python3-asyncio</exec_depend>
  <exec_depend>python3-socket</exec_depend>
  <exec_depend>python3-numpy</exec_depend>


  <!--external dependencies-->
  <exec_depend>python3-protobuf</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
